--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -824,4 +824,5 @@
 
     <string name="file_link_unavaible_delete_account" context="Error message shown when opening a file or folder link which account has been removed due to ToS/AUP violation">The associated user account has been terminated due to multiple violations of our Terms of Service.</string>
 
+    <string name="general_error_invalid_decryption_key" context="Error message shown after login into a folder link with an invalid decryption key">The provided decryption key for the folder link is invalid.</string>
 </resources>
