--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -827,4 +827,5 @@
     <string name="general_error_invalid_decryption_key" context="Error message shown after login into a folder link with an invalid decryption key">The provided decryption key for the folder link is invalid.</string>
 
     <string name="my_account_my_credentials" context="Title of the label in the my account section. It shows the credentials of the current user so it can be used to be verified by other contacts">My credentials</string>
+    <string name="limited_bandwith" context="Word to indicate the limited bandwidth of the free accounts">Limited</string>
 </resources>
