--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -834,4 +834,20 @@
 
     <string name="recent_chat_empty" context="Message shown when the user has no recent chats">Invita a tus amigos a unirse al Chat y disfruta de nuestra plataforma encriptada con privacidad y seguridad.</string>
 
+    <string name="videocall_title" context="Title shown in the list of main chat screen for a videocall">Videollamada</string>
+
+    <plurals name="general_minutes">
+        <item quantity="one" context="Singular of minutes. 1 minute">minuto</item>
+        <item quantity="other" context="Plural of minutes. 2 minute">minutos</item>
+    </plurals>
+
+    <plurals name="general_hours">
+        <item quantity="one" context="Singular of hours. 1 hour">hora</item>
+        <item quantity="other" context="Plural of hours. 2 hours">horas</item>
+    </plurals>
+
+    <plurals name="general_seconds">
+        <item quantity="one" context="Singular of seconds. 1 second">segundo</item>
+        <item quantity="other" context="Plural of seconds. 2 second">segundos</item>
+    </plurals>
 </resources>
