--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -841,4 +841,20 @@
 
     <string name="recent_chat_empty" context="Message shown when the user has no recent chats">Invite your friends to join you on Chat and enjoy our encrypted platform with privacy and security.</string>
 
+    <string name="videocall_title" context="Title shown in the list of main chat screen for a videocall">Video call</string>
+
+    <plurals name="general_minutes">
+        <item quantity="one" context="Singular of minutes. 1 minute">minute</item>
+        <item quantity="other" context="Plural of minutes. 2 minute">minutes</item>
+    </plurals>
+
+    <plurals name="general_hours">
+        <item quantity="one" context="Singular of hours. 1 hour">hour</item>
+        <item quantity="other" context="Plural of hours. 2 hours">hours</item>
+    </plurals>
+
+    <plurals name="general_seconds">
+        <item quantity="one" context="Singular of seconds. 1 second">second</item>
+        <item quantity="other" context="Plural of seconds. 2 second">seconds</item>
+    </plurals>
 </resources>
