--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -862,4 +862,7 @@
     <string name="action_mute" context="Menu item">Mute</string>
 
     <string name="invite_Lara_chat" context="Menu item">Invite Lara to join you on Chat by sending the message above.\n\nPlease note that, this invitation will be sent by email and for that reason encryption will not be applied.</string>
+
+    <string name="chat_me_text" context="Word next to own user's message in chat screen">Me</string>
+    <string name="type_message_hint" context="Hint shown in the field to write a message in the chat screen">Type a message</string>
 </resources>
