--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -881,4 +881,8 @@
 
     <string name="call_ringtone_title" context="Title of the screen to select the ringtone of the calls">Call ringtone</string>
     <string name="notification_sound_title" context="Title of the screen to select the sound of the notifications">Notification sound</string>
+
+    <string name="confirmation_clear_chat" context="Text of the confirmation dialog to clear the chat history">Clear all messages?\nAfter cleared, neither %s nor you will be able to see messages of this chat.</string>
+
+    <string name="general_clear" context="Button to clear the chat history">Clear</string>
 </resources>
