--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -835,11 +835,12 @@
     <string name="tab_recent_chat" context="Title of the recent chats tab. Capital letters">RECENT</string>
 
     <string name="archive_chat_empty" context="Message shown when the user has no archived chats">No archived conversations</string>
+    <string name="recent_chat_empty" context="Message shown when the user has no archived chats">No conversations</string>
     <string name="action_new_chat" context="Menu item">New chat</string>
 
     <string name="get_started_button" context="Button to start using the chat">Get started</string>
 
-    <string name="recent_chat_empty" context="Message shown when the user has no recent chats">Invite your friends to join you on Chat and enjoy our encrypted platform with privacy and security.</string>
+    <string name="recent_chat_empty_invite" context="Message shown when the user has no recent chats">Invite your friends to join you on Chat and enjoy our encrypted platform with privacy and security.</string>
 
     <string name="videocall_title" context="Title shown in the list of main chat screen for a videocall">Video call</string>
 
