--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -880,8 +880,6 @@
     <string name="number_correctly_invite_contact_request" context="success message when reinviting multiple contacts">%d invite requests sent successfully. </string>
     <string name="number_no_invite_contact_request" context="error message when reinviting multiple contacts">%1$d invite requests successfully sent but %2$d requests were not sent.</string>
 
-    <string name="invite_Lara_chat" context="Menu item">Invite Lara to join you on Chat by sending the message above.\n\nPlease note that, this invitation will be sent by email and for that reason encryption will not be applied.</string>
-
     <string name="chat_me_text" context="Word next to own user's message in chat screen">Me</string>
     <string name="type_message_hint" context="Hint shown in the field to write a message in the chat screen">Type a message</string>
 
@@ -905,5 +903,13 @@
     <string name="clear_history_error" context="Message show when the history of a chat hasn't been successfully deleted">Error. The history of the chat has not been cleared correctly</string>
 
     <string name="add_participants_menu_item" context="Menu item to add participants to a chat">Add participants</string>
+
+    <string name="mega_info_empty_screen" context="Message about MEGA when there are no message in the chat screen">protects your chat with end-to-end (user controlled) encryption providing essential safety assurances:</string>
+    <string name="mega_authenticity_empty_screen" context="Message about MEGA when there are no message in the chat screen">The system ensures that the data received is from the sender displayed, and its content has not been manipulated during transit.</string>
+    <string name="mega_confidentiality_empty_screen" context="Message about MEGA when there are no message in the chat screen">Only the author and intended recipients are able to decipher and read the content.</string>
+
+    <string name="title_mega_info_empty_screen" context="Message about MEGA when there are no message in the chat screen">MEGA</string>
+    <string name="title_mega_authenticity_empty_screen" context="Message about MEGA when there are no message in the chat screen">Authenticity</string>
+    <string name="title_mega_confidentiality_empty_screen" context="Message about MEGA when there are no message in the chat screen">Confidentiality</string>
 
 </resources>
