--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -46,8 +46,8 @@
     <string name="export_key_confirmation" context="confirmation message before downloading to the device the MasterKey file">安全提示！這是高風險的操作，妳確定要繼續？</string> 
      
     <string name="more_options_overflow" context="title of the menu for more options for each file (rename, share, copy, move, etc)">更多選項</string> 
-    <string name="confirmation_remove_contact" context="confirmation message before removing a contact. Do not write question mark">您確定移除聯繫人嗎？</string>    
-    <string name="confirmation_remove_multiple_contacts" context="confirmation message before removing mutiple contacts">您確定移除這些聯繫人嗎？</string>  
+    <string name="confirmation_remove_contact" context="confirmation message before removing a contact. Do not write question mark">您確定移除聯絡人嗎？</string>    
+    <string name="confirmation_remove_multiple_contacts" context="confirmation message before removing mutiple contacts">您確定移除這些聯絡人嗎？</string>  
     <string name="confirmation_move_to_rubbish" context="confirmation message before removing a file">移動至垃圾箱？</string>
     <string name="confirmation_move_to_rubbish_plural" context="confirmation message before removing a file">您確定要將這些項目都移至垃圾桶嗎？</string>
     <string name="confirmation_delete_from_mega" context="confirmation message before removing a file">確定從MEGA刪除嗎？</string>
@@ -60,7 +60,7 @@
     <string name="action_logout" context="Button where the user can sign off or logout">登出</string>
     <string name="action_add" context="Menu item">上傳...</string>
     <string name="action_create_folder" context="Menu item">創建新文件夾</string>
-    <string name="action_open_link" context="Menu item">打開連接...</string>
+    <string name="action_open_link" context="Menu item">開啟連結...</string>
     <string name="action_upload" context="Button text when choosing the destination location in MEGA">上傳至</string>
     <string name="action_settings" context="Menu item">設定</string>
     <string name="action_search" context="Search button">搜尋</string>
@@ -81,7 +81,7 @@
     <string name="toast_master_key" context="success message when the MasterKey file has been downloaded">萬能密鑰已經匯出至：</string>
     <string name="toast_master_key_removed" context="success message when the MasterKey file has been removed">萬能密鑰檔案已被移除。</string>
     <string name="cancel_subscription_ok" context="success message when the subscription has been canceled correctly">簽約已經成功取消</string>
-    <string name="cancel_subscription_error" context="error message when the subscription has not been canceled successfully">簽約尚未取消。請聯繫 support@mega.nz 來取消您的簽約</string>
+    <string name="cancel_subscription_error" context="error message when the subscription has not been canceled successfully">簽約尚未取消。請聯絡 support@mega.nz 來取消您的簽約</string>
     <string name="action_kill_all_sessions" context="Menu item to kill all opened sessions">關閉所有項目</string>
     <string name="success_kill_all_sessions" context="Message after kill all opened sessions">剩餘項目已成功關閉</string>
     <string name="error_kill_all_sessions" context="Message after kill all opened sessions">關閉項目時發生錯誤</string>    
@@ -163,7 +163,7 @@
     <string name="create_account_no_terms" context="warning dialog">您必須接受我們的服務條款。</string>
 	<string name="error_enter_username" context="Warning dialog">請輸入你的名字。</string>
     <string name="error_short_password" context="when creating the account">密碼太短</string>
-    <string name="error_passwords_dont_match" context="when creating the account">密碼不匹配</string>
+    <string name="error_passwords_dont_match" context="when creating the account">密碼並不匹配</string>
     <string name="error_email_registered" contect="when creating the account">這個電子郵件信箱在MEGA已被註冊。</string>
     
     <string name="create_account_confirm_title" context="Title that is shown when e-mail confirmation is still required for the account">需取得確認信</string>
@@ -473,7 +473,7 @@
     <string name="settings_pin_lock" context="settings category title. Below this title, the pin lock settings start">PIN 鎖定</string>
     
     <string name="settings_advanced_features" context="Settings category title for cache and offline files">進階功能</string>
-    <string name="settings_advanced_features_cache" context="Settings preference title for cache">清楚緩存</string>
+    <string name="settings_advanced_features_cache" context="Settings preference title for cache">清除緩存</string>
     <string name="settings_advanced_features_offline" context="Settings preference title for offline files">清除離線檔案</string>
     
     <string name="settings_advanced_features_size" context="Size of files in offline or cache folders">目前已使用 %s</string>    
