Tasks #5643: Remove participants of group chats

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -929,4 +929,6 @@
     <string name="title_properties_chat_leave_chat" context="Title of the section to leave a group content in the Contact Properties screen">Leave chat</string>
     <string name="participants_chat_label" context="Label for participants of a group chat">Participants</string>
 
+    <string name="confirmation_remove_chat_contact" context="confirmation message before removing a contact from a chat.">Remove the contact %s from this chat?</string>
+
 </resources>
