--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -926,9 +926,16 @@
     <string name="text_cleared_history" context="Text shown when a user cleared the history of a chat">cleared the chat history.</string>
 
     <string name="group_chat_label" context="Label for the sliding panel of a group chat">Group chat</string>
+    <string name="group_chat_info_label" context="Label for the option of the sliding panel to show the info of a chat group">Group info</string>
+    <string name="group_chat_start_conversation_label" context="Label for the option of the sliding panel to start a one to one chat">Start conversation</string>
+    <string name="group_chat_edit_profile_label" context="Label for the option of the sliding panel to edit the profile">Edit profile</string>
     <string name="title_properties_chat_leave_chat" context="Title of the section to leave a group content in the Contact Properties screen">Leave chat</string>
     <string name="participants_chat_label" context="Label for participants of a group chat">Participants</string>
 
     <string name="confirmation_remove_chat_contact" context="confirmation message before removing a contact from a chat.">Remove the contact %s from this chat?</string>
+
+    <string name="observer_permission_label_participants_panel" context="Label to show the participant permission in the options panel of the group info screen">Observer</string>
+    <string name="member_permission_label_participants_panel" context="Label to show the participant permission in the options panel of the group info screen">Member</string>
+    <string name="administrator_permission_label_participants_panel" context="Label to show the participant permission in the options panel of the group info screen">Administrator</string>
 
 </resources>
