--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -938,4 +938,7 @@
     <string name="member_permission_label_participants_panel" context="Label to show the participant permission in the options panel of the group info screen">Member</string>
     <string name="administrator_permission_label_participants_panel" context="Label to show the participant permission in the options panel of the group info screen">Administrator</string>
 
+    <string name="change_title_messages" context="Message shown when a participant change the title of a group chat. Leave final space.">changed the group chat name to </string>
+    <string name="edited_message_text" context="Text appended to a edited message. Leave initial space."> (edited)</string>
+
 </resources>
