--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -948,7 +948,13 @@
     <string name="confirmation_clear_group_chat" context="Text of the confirmation dialog to clear a group chat history">After cleared, you won\'t be able to see messages of this chat.</string>
     <string name="title_confirmation_clear_group_chat" context="Title of the confirmation dialog to clear a group chat history">Clear all messages?</string>
 
-    <string name="add_participant_success" context="Message show when a participant has been successfully invited to chat">The participant has been correctly invited</string>
-    <string name="add_participant_error" context="Message show when a participant hasn't been successfully invited to chat">Error. The participant has not been invited correctly</string>
-    <string name="add_participant_error_already_exists" context="Message show when a participant hasn't been successfully invited to chat">The participant is already included in this group chat</string>
+    <string name="add_participant_success" context="Message show when a participant has been successfully invited to a group chat">The participant has been correctly invited</string>
+    <string name="add_participant_error" context="Message show when a participant hasn't been successfully invited to a group chat">Error. The participant has not been invited correctly</string>
+    <string name="add_participant_error_already_exists" context="Message show when a participant hasn't been successfully invited to a group chat">The participant is already included in this group chat</string>
+
+    <string name="remove_participant_success" context="Message show when a participant has been successfully removed from a group chat">The participant has been correctly removed</string>
+    <string name="remove_participant_error" context="Message show when a participant hasn't been successfully removed from a group chat">Error. The participant has not been removed correctly</string>
+
+    <string name="number_correctly_add_participant" context="success message when inviting multiple contacts to a group chat">%d participants were correctly invited</string>
+    <string name="number_no_add_participant_request" context="error message when inviting multiple contacts to a group chat">%1$d participants were successfully invited but %2$d participants were not invited.</string>
 </resources>
